# Free-kick-simulator

./: pyproject.toml
01_KickSimulator/: Vector.h  ball.vtp  generate_free_kick_waypoints.h  main  main.cpp  run_simulations.sh  search_parameter_space.sh  visualise.py  visualise_all.py  wall.vtp
01_KickSimulator/output/: ball.vtp  ball_t0.vtp  ball_t1.vtp  ball_t10.vtp  ball_t100.vtp  ball_t101.vtp  ball_t102.vtp  ball_t103.vtp  ball_t104.vtp  ball_t105.vtp  ball_t106.vtp  ball_t107.vtp  ball_t108.vtp  ball_t109.vtp  ball_t11.vtp  ball_t110.vtp  ball_t111.vtp  ball_t112.vtp  ball_t113.vtp  ball_t114.vtp  ball_t115.vtp  ball_t116.vtp  ball_t117.vtp  ball_t118.vtp  ball_t119.vtp  ball_t12.vtp  ball_t120.vtp  ball_t121.vtp  ball_t122.vtp  ball_t123.vtp  ball_t124.vtp  ball_t125.vtp  ball_t126.vtp  ball_t127.vtp  ball_t128.vtp  ball_t129.vtp  ball_t13.vtp  ball_t130.vtp  ball_t131.vtp  ball_t132.vtp  (+276 more)
02_Raytracing/: Makefile  main  main.cpp
02_Raytracing/output/: wall_intersect.csv
02_Raytracing/output/wavepoints_0/: wall_intersect.csv
02_Raytracing/output/wavepoints_104/: wall_intersect.csv
02_Raytracing/output/wavepoints_107/: wall_intersect.csv
02_Raytracing/output/wavepoints_116/: wall_intersect.csv
02_Raytracing/output/wavepoints_118/: wall_intersect.csv
02_Raytracing/output/wavepoints_12/: wall_intersect.csv
02_Raytracing/output/wavepoints_123/: wall_intersect.csv
02_Raytracing/output/wavepoints_124/: wall_intersect.csv
04_render/: main.cpp  main_better.cpp  main_good.cpp  main_much_better.cpp
(+41 files in other folders)
